# DAR/swagger.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "title": "DAR: APP APP HZ"
   },
-  "host": "apiresttask.swagger.io",
+  "host": "api-manag-tasks.azure-api.net",
   "basePath": "/v1",
   "schemes": [
     "https",
@@ -117,6 +117,87 @@
         "responses": {
           "default": {
             "description": "successful operation"
+          }
+        }
+      }
+    },
+    "/tasks/update": {
+      "put": {
+        "tags": [
+          "tasks"
+        ],
+        "summary": "Update an existing task",
+        "description": "",
+        "operationId": "modify",
+        "consumes": [
+          "application/json",
+          "application/xml"
+        ],
+        "produces": [
+          "application/xml",
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Task object that exist in DB",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Task"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Invalid ID supplied"
+          },
+          "404": {
+            "description": "Task not found"
+          },
+          "405": {
+            "description": "Validation exception"
+          }
+        },
+        "security": [
+          {
+            "tasks_auth": [
+              "write:tasks",
+              "read:tasks"
+            ]
+          }
+        ]
+      }
+    },
+    "/tasks/deleteById": {
+      "delete": {
+        "tags": [
+          "tasks"
+        ],
+        "summary": "Deletes a task by its id",
+        "operationId": "deleteById",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "description": "Id of the task",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Task"
+            }
+          },
+          "400": {
+            "description": "Invalid id supplied"
           }
         }
       }
